k8s/base/http/nicolatomassoni/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nicolatomassoni-website
  namespace: http
  labels:
    app: nicolatomassoni-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nicolatomassoni-website
  template:
    metadata:
      labels:
        app: nicolatomassoni-website
    spec:
      containers:
      - name: hugo
        image: ghcr.io/nonzod/personal-website:bf0b32024822ae1770642c270065d526da6f8a6c
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "128Mi"
            cpu: "0.2"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
