k8s/base/http/nicolatomassoni/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nicolatomassoni-service
  namespace: http
spec:
  selector:
    app: nicolatomassoni-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
