k8s/base/http/nicolatomassoni/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nicolatomassoni-ingress
  namespace: http
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nicolatomassoni.it
        - www.nicolatomassoni.it
      secretName: nicolatomassoni-tls
  rules:
  - host: "www.nicolatomassoni.it"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nicolatomassoni-service
            port:
              number: 80
  - host: "nicolatomassoni.it"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nicolatomassoni-service
            port:
              number: 80
